--- a/services/auth-service/AuthService.Client/appsettings.json
+++ b/services/auth-service/AuthService.Client/appsettings.json
@@ -14,5 +14,12 @@
     "Issuer": "WebmtsAuthService",
     "Audience": "WebmtsClient",
     "ExpireMinutes": 60
+  },
+  "CacheSettings": {
+    "CacheType": "DistributedCache",
+    "DistributedCache": {
+      "ConnectionString": "redis:6379",
+      "InstanceName": "webmts_"
+    }
   }
 }
