--- a/services/auth-service/AuthService.Business/AuthService.Business.csproj
+++ b/services/auth-service/AuthService.Business/AuthService.Business.csproj
@@ -8,14 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="8.2.0" />
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Handlers\" />
     </ItemGroup>
 
     <ItemGroup>
