--- a/services/auth-service/AuthService.Common/AuthService.Common.csproj
+++ b/services/auth-service/AuthService.Common/AuthService.Common.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Autofac" Version="8.2.0" />
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
       <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
