--- a/services/auth-service/AuthService.Business/AuthService.Business.csproj
+++ b/services/auth-service/AuthService.Business/AuthService.Business.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="8.2.0" />
-      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
@@ -18,6 +17,7 @@
     <ItemGroup>
       <ProjectReference Include="..\AuthService.Common\AuthService.Common.csproj" />
       <ProjectReference Include="..\AuthService.Contract\AuthService.Contract.csproj" />
+      <ProjectReference Include="..\AuthService.Data\AuthService.Data.csproj" />
     </ItemGroup>
 
 </Project>
