--- a/services/auth-service/AuthService.Client/appsettings.json
+++ b/services/auth-service/AuthService.Client/appsettings.json
@@ -7,13 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=auth-db;Database=auth_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=auth-db;Port=5432;Database=auth_db;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Key": "YourSuperSecretKey-MoreThan256BitsLongForHS256",
     "Issuer": "WebmtsAuthService",
     "Audience": "WebmtsClient",
     "ExpireMinutes": 60
+  },
+  "TokenSettings": {
+    "AccessTokenExpiryMinutes": 60,
+    "RefreshTokenExpiryDays": 7
   },
   "CacheSettings": {
     "CacheType": "DistributedCache",
