--- a/services/auth-service/AuthService.Client/appsettings.json
+++ b/services/auth-service/AuthService.Client/appsettings.json
@@ -9,6 +9,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=auth-db;Port=5432;Database=auth_db;Username=postgres;Password=postgres"
   },
+  "Consul": {
+    "Host": "consul",
+    "Port": 8500
+  },
+  "Service": {
+    "Name": "auth-service",
+    "Address": "auth-service",
+    "Port": 8080,
+    "HealthCheckEndpoint": "api/auth/health",
+    "Tags": ["auth", "api"]
+  },
   "Jwt": {
     "Key": "YourSuperSecretKey-MoreThan256BitsLongForHS256",
     "Issuer": "WebmtsAuthService",
@@ -25,5 +36,10 @@
       "ConnectionString": "redis:6379",
       "InstanceName": "webmts_"
     }
+  },
+  "ServiceSettings": {
+    "ServiceName": "auth-service",
+    "ServiceAddress": "auth-service",
+    "ServicePort": 8080
   }
 }
