--- a/services/auth-service/AuthService.Common/AuthService.Common.csproj
+++ b/services/auth-service/AuthService.Common/AuthService.Common.csproj
@@ -19,8 +19,11 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
       <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Consul" Version="1.7.14.7" />
     </ItemGroup>
 
 </Project>
