--- a/services/auth-service/AuthService.Client/appsettings.Development.json
+++ b/services/auth-service/AuthService.Client/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "TestConfig": {
+    "Value": "İlk Test Değeri - Sürüm 1 - dev"
   }
 }
