--- a/services/auth-service/AuthService.Client/appsettings.json
+++ b/services/auth-service/AuthService.Client/appsettings.json
@@ -41,5 +41,8 @@
     "ServiceName": "auth-service",
     "ServiceAddress": "auth-service",
     "ServicePort": 8080
+  },
+  "TestConfig": {
+    "Value": "İlk Test Değeri - Sürüm 1 - Main"
   }
 }
