Added ELK stack

--- a/services/auth-service/AuthService.Client/appsettings.json
+++ b/services/auth-service/AuthService.Client/appsettings.json
@@ -44,5 +44,32 @@
   },
   "TestConfig": {
     "Value": "İlk Test Değeri - Sürüm 1 - Main"
+  },
+  "Elasticsearch": {
+    "Url": "http://elasticsearch:9200",
+    "KibanaUrl": "http://kibana:5601",
+    "IndexPattern": "auth-service-*",
+    "Username": "elastic",
+    "Password": "changeme",
+    "IndexFormat": "auth-service-{0:yyyy.MM}"
+  },
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   }
 }
