--- a/services/auth-service/AuthService.Data/AuthService.Data.csproj
+++ b/services/auth-service/AuthService.Data/AuthService.Data.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AuthService.Common\AuthService.Common.csproj" />
+      <ProjectReference Include="..\AuthService.Contract\AuthService.Contract.csproj" />
     </ItemGroup>
 
 </Project>
