--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,28 +30,6 @@ services:
       - "6379:6379"
     networks:
       - webmts-network
-
-  auth-service:
-    build:
-      context: .
-      dockerfile: services/auth-service/AuthService.Client/Dockerfile
-    container_name: webmts-auth-service
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:8080
-      - ConnectionStrings__DefaultConnection=Host=auth-db;Database=auth_db;Username=postgres;Password=postgres
-    ports:
-      - "8081:8080"  # Doğrudan erişim için port mapping ekleyelim
-    depends_on:
-      auth-db:
-        condition: service_healthy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.auth-router.rule=PathPrefix(`/api/auth`)"
-      - "traefik.http.routers.auth.service=auth-svc"
-      - "traefik.http.services.auth-svc.loadbalancer.server.port=8080"
-    networks:
-      - webmts-network
   
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
@@ -128,6 +106,28 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+      
+  auth-service:
+    build:
+      context: .
+      dockerfile: services/auth-service/AuthService.Client/Dockerfile
+    container_name: webmts-auth-service
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
+      - ConnectionStrings__DefaultConnection=Host=auth-db;Database=auth_db;Username=postgres;Password=postgres
+    ports:
+      - "8081:8080"
+    depends_on:
+      auth-db:
+        condition: service_healthy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.auth-router.rule=PathPrefix(`/api/auth`)"
+      - "traefik.http.routers.auth.service=auth-svc"
+      - "traefik.http.services.auth-svc.loadbalancer.server.port=8080"
+    networks:
+      - webmts-network
 
   auth-db:
     image: postgres:16-alpine
@@ -147,29 +147,41 @@ services:
     networks:
       - webmts-network
 
-  # Customer Service
   customer-service:
     build:
-      context: ./services/customer-service/Webmts.CustomerService
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/customer-service/CustomerService.Client/Dockerfile
+    container_name: webmts-customer-service
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
       - ConnectionStrings__DefaultConnection=Host=customer-db;Database=customer_db;Username=postgres;Password=postgres
+    ports:
+      - "8082:8080"
     depends_on:
-      - customer-db
+      customer-db:
+        condition: service_healthy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.customer.rule=PathPrefix(`/api/customer`)"
-      - "traefik.http.services.customer.loadbalancer.server.port=8080"
+      - "traefik.http.routers.customer.service=customer-svc"
+      - "traefik.http.services.customer-svc.loadbalancer.server.port=8080"
     networks:
       - webmts-network
 
   customer-db:
-    image: postgres:15
+    image: postgres:16-alpine
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=customer_db
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d customer_db" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - customer-db-data:/var/lib/postgresql/data
     networks:
