--- a/services/customer-service/CustomerService.Business/CustomerService.Business.csproj
+++ b/services/customer-service/CustomerService.Business/CustomerService.Business.csproj
@@ -1,15 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\CustomerService.Common\CustomerService.Common.csproj" />
-    <ProjectReference Include="..\CustomerService.Contract\CustomerService.Contract.csproj" />
-    <ProjectReference Include="..\CustomerService.Data\CustomerService.Data.csproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Autofac" Version="8.2.0"/>
+        <PackageReference Include="MediatR" Version="12.4.1"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CustomerService.Common\CustomerService.Common.csproj"/>
+        <ProjectReference Include="..\CustomerService.Contract\CustomerService.Contract.csproj"/>
+        <ProjectReference Include="..\CustomerService.Data\CustomerService.Data.csproj"/>
+    </ItemGroup>
 
 </Project>
