--- a/services/customer-service/CustomerService.Client/Dockerfile
+++ b/services/customer-service/CustomerService.Client/Dockerfile
@@ -1,23 +1,21 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["CustomerService.Client/CustomerService.Client.csproj", "CustomerService.Client/"]
-RUN dotnet restore "CustomerService.Client/CustomerService.Client.csproj"
+
+COPY ["services/customer-service/CustomerService.Client/CustomerService.Client.csproj", "services/customer-service/CustomerService.Client/"]
+COPY ["services/customer-service/CustomerService.Business/CustomerService.Business.csproj", "services/customer-service/CustomerService.Business/"]
+COPY ["services/customer-service/CustomerService.Common/CustomerService.Common.csproj", "services/customer-service/CustomerService.Common/"]
+COPY ["services/customer-service/CustomerService.Data/CustomerService.Data.csproj", "services/customer-service/CustomerService.Data/"]
+COPY ["services/customer-service/CustomerService.Contract/CustomerService.Contract.csproj", "services/customer-service/CustomerService.Contract/"]
+
+RUN dotnet restore "services/customer-service/CustomerService.Client/CustomerService.Client.csproj"
+
 COPY . .
-WORKDIR "/src/CustomerService.Client"
-RUN dotnet build "CustomerService.Client.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "CustomerService.Client.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+WORKDIR "/src/services/customer-service/CustomerService.Client"
+RUN dotnet publish "CustomerService.Client.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
+EXPOSE 8080
 ENTRYPOINT ["dotnet", "CustomerService.Client.dll"]
