--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -187,29 +187,41 @@ services:
     networks:
       - webmts-network
 
-  # Transaction Service
   transaction-service:
     build:
-      context: ./services/transaction-service/Webmts.TransactionService
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/transaction-service/TransactionService.Client/Dockerfile
+    container_name: webmts-transaction-service
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
       - ConnectionStrings__DefaultConnection=Host=transaction-db;Database=transaction_db;Username=postgres;Password=postgres
+    ports:
+      - "8083:8080"
     depends_on:
-      - transaction-db
+      auth-db:
+        condition: service_healthy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.transaction.rule=PathPrefix(`/api/transaction`)"
-      - "traefik.http.services.transaction.loadbalancer.server.port=8080"
+      - "traefik.http.routers.transaction-router.rule=PathPrefix(`/api/transaction`)"
+      - "traefik.http.routers.transaction.service=transaction-svc"
+      - "traefik.http.services.transaction-svc.loadbalancer.server.port=8080"
     networks:
       - webmts-network
 
   transaction-db:
-    image: postgres:15
+    image: postgres:16-alpine
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=transaction_db
+    ports:
+      - "5434:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d transaction_db" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - transaction-db-data:/var/lib/postgresql/data
     networks:
