--- a/services/notification-service/NotificationService.Client/appsettings.json
+++ b/services/notification-service/NotificationService.Client/appsettings.json
@@ -5,5 +5,71 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=notification-db;Port=5435;Database=notification_db;Username=postgres;Password=postgres"
+  },
+  "Consul": {
+    "Host": "consul",
+    "Port": 8500
+  },
+  "Service": {
+    "Name": "notification-service",
+    "Address": "notification-service",
+    "Port": 8080,
+    "HealthCheckEndpoint": "api/notification/health",
+    "Tags": ["notification", "api"]
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKey-MoreThan256BitsLongForHS256",
+    "Issuer": "WebmtsNotificationService",
+    "Audience": "WebmtsClient",
+    "ExpireMinutes": 60
+  },
+  "TokenSettings": {
+    "AccessTokenExpiryMinutes": 60,
+    "RefreshTokenExpiryDays": 7
+  },
+  "CacheSettings": {
+    "CacheType": "DistributedCache",
+    "DistributedCache": {
+      "ConnectionString": "redis:6379",
+      "InstanceName": "webmts_"
+    }
+  },
+  "ServiceSettings": {
+    "ServiceName": "notification-service",
+    "ServiceAddress": "notification-service",
+    "ServicePort": 8080
+  },
+  "TestConfig": {
+    "Value": "İlk Test Değeri - Sürüm 1 - Main"
+  },
+  "Elasticsearch": {
+    "Url": "http://elasticsearch:9200",
+    "KibanaUrl": "http://kibana:5601",
+    "IndexPattern": "notification-service-*",
+    "Username": "elastic",
+    "Password": "changeme",
+    "IndexFormat": "notification-service-{0:yyyy.MM}"
+  },
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+  }
 }
