--- a/services/customer-service/CustomerService.Client/appsettings.json
+++ b/services/customer-service/CustomerService.Client/appsettings.json
@@ -64,5 +64,14 @@
       }
     ],
     "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeName": "webmts_events",
+    "QueueName": "customer_events"
   }
 }
