--- a/services/notification-service/NotificationService.Client/appsettings.json
+++ b/services/notification-service/NotificationService.Client/appsettings.json
@@ -18,7 +18,10 @@
     "Address": "notification-service",
     "Port": 8080,
     "HealthCheckEndpoint": "api/notification/health",
-    "Tags": ["notification", "api"]
+    "Tags": [
+      "notification",
+      "api"
+    ]
   },
   "Jwt": {
     "Key": "YourSuperSecretKey-MoreThan256BitsLongForHS256",
@@ -53,7 +56,6 @@
     "Password": "changeme",
     "IndexFormat": "notification-service-{0:yyyy.MM}"
   },
-
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -70,6 +72,38 @@
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeName": "webmts_events",
+    "QueueName": "notification_queue"
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.example.com",
+    "SmtpPort": 587,
+    "Username": "notifications@example.com",
+    "Password": "your-smtp-password",
+    "SenderEmail": "notifications@example.com",
+    "SenderName": "WEBMTS Notifications",
+    "EnableSsl": true
+  },
+  "SmsSettings": {
+    "ApiUrl": "https://api.sms-provider.com",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret",
+    "SenderId": "WEBMTS"
+  },
+  "PushSettings": {
+    "ApiKey": "your-push-api-key",
+    "AppId": "your-app-id"
   }
 }
